--- a/Resources/settings.json
+++ b/Resources/settings.json
@@ -6,5 +6,14 @@
 		"Down": 12,
 		"Enter": 0,
 		"Escape": 7
+	},
+
+	"Network": {
+		"Maximum Clients" : 2,
+		"Packet Channels" : 1,
+		"Server IP" : "localhost",
+		"Server Port" : 22222,
+		"Packet Send Rate Per Second" : 10,
+		"Packet Tick Rate Per Second" : 60
 	}
 }
